improved forms catalogs
improved forms catalogs

--- a/CarsPartsReconstruccion/Views/Catalog/Create.cshtml
+++ b/CarsPartsReconstruccion/Views/Catalog/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model CarsPartsReconstruccion.Models.Catalog
 
 @{
-    ViewBag.Title = "Create a Catalog";
+    ViewBag.Title = "Create a " + @Model.catalogName;
 }
 
 <h2>@ViewBag.Title</h2>
