--- a/CarsPartsReconstruccion/Views/Catalog/Delete.cshtml
+++ b/CarsPartsReconstruccion/Views/Catalog/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model CarsPartsReconstruccion.Models.Catalog
 
 @{
-    ViewBag.Title = "Delete a Catalog";
+    ViewBag.Title = "Delete a " + @Model.catalogName; 
 }
 
 <h2>@ViewBag.Title</h2>
