--- a/CarsPartsReconstruccion/Views/Catalog/Edit.cshtml
+++ b/CarsPartsReconstruccion/Views/Catalog/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model CarsPartsReconstruccion.Models.Catalog
 
 @{
-    ViewBag.Title = "Edit a Catalog";
+    ViewBag.Title = "Edit a " + @Model.catalogName;
 }
 
 <h2>@ViewBag.Title</h2>
