--- a/CarsPartsReconstruccion/Views/Catalog/Index.cshtml
+++ b/CarsPartsReconstruccion/Views/Catalog/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<CarsPartsReconstruccion.Models.Catalog>
 
 @{
-    ViewBag.Title = "Catalog List";
+    ViewBag.Title = @ViewBag.selectedCatalogName + " List";
 }
 
 <h2>@ViewBag.Title</h2>
