--- a/CarsPartsReconstruccion/Views/SupplierPart/Edit.cshtml
+++ b/CarsPartsReconstruccion/Views/SupplierPart/Edit.cshtml
@@ -6,7 +6,8 @@
 
 <h2>Edit</h2>
 
-@using (Html.BeginForm()) {
+@using (Html.BeginForm())
+{
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true)
 
@@ -52,7 +53,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "Index", new { SupplierId = Model.supplierId })
 </div>
 
 @section Scripts {
