more than 5 percent difference in average piece price, alert and update
more than 5 percent difference in average piece price, alert and update

--- a/CarsPartsReconstruccion/Views/SupplierPart/UpdatePartPrice.cshtml
+++ b/CarsPartsReconstruccion/Views/SupplierPart/UpdatePartPrice.cshtml
@@ -5,7 +5,8 @@
 }
 
 <h3>
-    The reference price (@ViewBag.PartPrice) is too far from the average of the suppliers prices (@Model.partPrice)
+    The reference price (@String.Format("{0:C}", @ViewBag.PartPrice)) is too far from the average of the suppliers prices (@String.Format("{0:C}", @Model.partPrice))
+    
 </h3>
 
 <h2>@ViewBag.Title</h2>
