--- a/CarsPartsReconstruccion/Views/Supplier/Index.cshtml
+++ b/CarsPartsReconstruccion/Views/Supplier/Index.cshtml
@@ -15,6 +15,9 @@
             @Html.DisplayNameFor(model => model.supplierName)
         </th>
         <th>
+            Parts & Pieces
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.description)
         </th>
         <th>
@@ -33,10 +36,17 @@
     {
         <tr>
             <td>
-                @Html.ActionLink(item.supplierName, "Index", "SupplierPart", new { supplierId = item.supplierId },
+                @*@Html.ActionLink(item.supplierName, "Index", "SupplierPart", new { supplierId = item.supplierId },
+                    new { title = "Parts List in \"" + item.supplierName + "\"" })*@
+
+                @Html.DisplayFor(modelItem => item.supplierName)
+            </td>
+            <td>
+                @Html.ActionLink("Parts", "Index", "SupplierPart", new { supplierId = item.supplierId },
                 new { title = "Parts List in \"" + item.supplierName + "\"" })
 
-                @*  @Html.DisplayFor(modelItem => item.supplierName) *@
+                @Html.ActionLink("Pieces", "Index", "SupplierPart", new { supplierId = item.supplierId },
+                new { title = "Parts List in \"" + item.supplierName + "\"" })
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.description)
@@ -51,8 +61,8 @@
                 @Html.DisplayFor(modelItem => item.Employee.employeeName)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.supplierId }) |
-                @Html.ActionLink("Details", "Details", new { id = item.supplierId }) |
+                @Html.ActionLink("Edit", "Edit", new { id = item.supplierId })|
+                @Html.ActionLink("Details", "Details", new { id = item.supplierId })|
                 @Html.ActionLink("Delete", "Delete", new { id = item.supplierId })
             </td>
         </tr>
