add the pieces for suppliers module
add the pieces for suppliers module

--- a/CarsPartsReconstruccion/Views/Supplier/Index.cshtml
+++ b/CarsPartsReconstruccion/Views/Supplier/Index.cshtml
@@ -45,7 +45,7 @@
                 @Html.ActionLink("Parts", "Index", "SupplierPart", new { supplierId = item.supplierId },
                 new { title = "Parts List in \"" + item.supplierName + "\"" })
 
-                @Html.ActionLink("Pieces", "Index", "SupplierPart", new { supplierId = item.supplierId },
+                @Html.ActionLink("Pieces", "Index", "SupplierPiece", new { supplierId = item.supplierId },
                 new { title = "Parts List in \"" + item.supplierName + "\"" })
             </td>
             <td>
