--- a/CarsPartsReconstruccion/Views/SupplierPiece/Create.cshtml
+++ b/CarsPartsReconstruccion/Views/SupplierPiece/Create.cshtml
@@ -1,7 +1,7 @@
-﻿@model CarsPartsReconstruccion.Models.SupplierPart
+﻿@model CarsPartsReconstruccion.Models.SupplierPiece
 
 @{
-    ViewBag.Title = "Add a Part";
+    ViewBag.Title = "Add a Piece";
 }
 
 <h2>@ViewBag.Title</h2>
@@ -12,7 +12,7 @@
     @Html.ValidationSummary(true)
 
     <fieldset>
-        <legend>SupplierPart</legend>
+        <legend>SupplierPiece</legend>
 
         <div class="editor-label">
             @Html.LabelFor(model => model.supplierId, "Supplier")
@@ -23,11 +23,11 @@
         </div>
 
         <div class="editor-label">
-            @Html.LabelFor(model => model.partId, "Part")
+            @Html.LabelFor(model => model.pieceId, "Piece")
         </div>
         <div class="editor-field">
-            @Html.DropDownList("partId", String.Empty)
-            @Html.ValidationMessageFor(model => model.partId)
+            @Html.DropDownList("pieceId", String.Empty)
+            @Html.ValidationMessageFor(model => model.pieceId)
         </div>
 
         <div class="editor-label">
