playing with partial views
playing with partial views

--- a/CarsPartsReconstruccion/Views/SupplierPart/IndexPart.cshtml
+++ b/CarsPartsReconstruccion/Views/SupplierPart/IndexPart.cshtml
@@ -10,36 +10,39 @@
 <p>
     @Html.ActionLink("Create New", "Create", new { supplierId = ViewBag.SupplierId })
 </p>
-<table>
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.supplierId)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.price)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.existence)
-        </th>
-    </tr>
 
-    @foreach (var item in Model)
-    {
+@Html.Action("PartSuppliers", "SupplierPart", new { partId = Model.First().partId })
+
+@*<table>
         <tr>
-            <td>
-                @Html.ActionLink(item.Supplier.supplierName,
-                "Index", "SupplierPart", new { supplierId = item.supplierId }, null)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.price)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.existence)
-            </td>
+            <th>
+                @Html.DisplayNameFor(model => model.supplierId)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.price)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.existence)
+            </th>
         </tr>
-    }
 
-</table>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.ActionLink(item.Supplier.supplierName,
+                    "Index", "SupplierPart", new { supplierId = item.supplierId }, null)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.price)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.existence)
+                </td>
+            </tr>
+        }
+
+    </table>*@
 
 <p>
     @Html.ActionLink("Back to Pieces", "Index", "Part")
