--- a/CarsPartsReconstruccion/Views/Service/Create.cshtml
+++ b/CarsPartsReconstruccion/Views/Service/Create.cshtml
@@ -38,21 +38,21 @@
             @Html.ValidationMessageFor(model => model.employeeId)
         </div>
 
-        <div class="editor-label">
-            @Html.LabelFor(model => model.estimatedPrice)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.estimatedPrice)
-            @Html.ValidationMessageFor(model => model.estimatedPrice)
-        </div>
+        @*<div class="editor-label">
+                @Html.LabelFor(model => model.estimatedPrice)
+            </div>
+            <div class="editor-field">
+                @Html.EditorFor(model => model.estimatedPrice)
+                @Html.ValidationMessageFor(model => model.estimatedPrice)
+            </div>
 
-        <div class="editor-label">
-            @Html.LabelFor(model => model.realPrice)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.realPrice)
-            @Html.ValidationMessageFor(model => model.realPrice)
-        </div>
+            <div class="editor-label">
+                @Html.LabelFor(model => model.realPrice)
+            </div>
+            <div class="editor-field">
+                @Html.EditorFor(model => model.realPrice)
+                @Html.ValidationMessageFor(model => model.realPrice)
+            </div>*@
 
         <div class="editor-label">
             @Html.LabelFor(model => model.serviceDescription)
@@ -62,21 +62,24 @@
             @Html.ValidationMessageFor(model => model.serviceDescription)
         </div>
 
-        <div class="editor-label">
-            @Html.LabelFor(model => model.statusId)
-        </div>
-        <div class="editor-field">
-            @Html.DropDownList("statusId", String.Empty)
-            @Html.ValidationMessageFor(model => model.statusId)
-        </div>
+        @*<div class="editor-label">
+                @Html.LabelFor(model => model.statusId)
+            </div>
+            <div class="editor-field">
+                @Html.DropDownList("statusId", String.Empty)
+                @Html.ValidationMessageFor(model => model.statusId)
+            </div>
 
-        <div class="editor-label">
-            @Html.LabelFor(model => model.statusObservations)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.statusObservations)
-            @Html.ValidationMessageFor(model => model.statusObservations)
-        </div>
+            <div class="editor-label">
+                @Html.LabelFor(model => model.statusObservations)
+            </div>
+            <div class="editor-field">
+                @Html.EditorFor(model => model.statusObservations)
+                @Html.ValidationMessageFor(model => model.statusObservations)
+            </div>*@
+
+        @Html.HiddenFor(model => model.statusId)
+        @Html.HiddenFor(model => model.statusObservations)
 
         <p>
             <input type="submit" value="Create" />
