--- a/CarsPartsReconstruccion/Views/Service/Index.cshtml
+++ b/CarsPartsReconstruccion/Views/Service/Index.cshtml
@@ -6,6 +6,13 @@
 
 <h2>@ViewBag.Title</h2>
 
+<form method="get">
+
+    <input type="search" name="searchValue" />
+    <input type="submit" value="Search By Customer" />
+
+</form>
+
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
