perfect the rearch

--- a/CarsPartsReconstruccion/Views/Service/Index.cshtml
+++ b/CarsPartsReconstruccion/Views/Service/Index.cshtml
@@ -10,7 +10,7 @@
       data-carpart-ajax="true" data-carpart-target="#restaurantList">
 
     <input type="search" name="searchValue" data-carpart-autocomplete="@Url.Action("Autocomplete")" />
-    <input type="submit" value="Search By Customer" />
+    <input type="submit" value="Search" />
 </form>
 
 @*@using (Ajax.BeginForm(new AjaxOptions
