--- a/CarsPartsReconstruccion/Views/Service/Index.cshtml
+++ b/CarsPartsReconstruccion/Views/Service/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<CarsPartsReconstruccion.Models.Service>
+﻿@model IPagedList<CarsPartsReconstruccion.Models.Service>
 
 @{
     ViewBag.Title = "Reconstructions List";
